# ragmcp

./: .gitignore  .pre-commit-config.yaml  PROJECT_SCHEDULE.md  README.md  devspec.md  pyproject.toml
config/: settings.yaml
src/ragmcp/: __init__.py
src/ragmcp/config/: __init__.py
src/ragmcp/embedding/: __init__.py  base.py
src/ragmcp/evaluation/: __init__.py  base.py
src/ragmcp/factory/: __init__.py  embedding_factory.py  llm_factory.py  reranker_factory.py  vector_store_factory.py  vision_llm_factory.py
src/ragmcp/llm/: __init__.py  azure_openai.py  base.py  claude_llm.py  deepseek_llm.py  ollama_llm.py  openai_llm.py  zhipu_llm.py
src/ragmcp/middleware/: __init__.py
src/ragmcp/pipeline/: __init__.py  base.py
src/ragmcp/rerank/: __init__.py  base.py
src/ragmcp/vector_store/: __init__.py  base.py
src/ragmcp/vision/: __init__.py  base.py
tests/: __init__.py
tests/config/: test_config_parser.py  test_settings.py
tests/embedding/: test_embedding_base.py
tests/evaluation/: test_base.py
tests/factory/: test_embedding_factory.py  test_llm_factory.py  test_reranker_factory.py  test_vector_store_factory.py  test_vision_llm_factory.py
tests/llm/: test_azure_openai.py  test_base.py  test_claude.py  test_deepseek.py  test_llm.py  test_ollama.py  test_openai.py  test_zhipu.py
tests/middleware/: test_log.py  test_rate_limit.py  test_retry.py
tests/pipeline/: test_loader.py  test_splitter.py  test_transform.py
tests/rerank/: test_base.py  test_rerank.py
tests/vector_store/: test_base.py  test_vector_store.py
tests/vision/: test_base.py  test_vision.py
